<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingStart="32dp"
              android:paddingEnd="32dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="@dimen/event_text_padding"
              android:layout_gravity="center"
              android:text="@string/event_title"
              android:textSize="18sp"
              app:hintTextAppearance="@style/TextInputLayoutLabelSize"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/event_text_padding"
            app:hintTextAppearance="@style/TextInputLayoutLabelSize">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/colorEventTextLabels"
                android:textSize="@dimen/event_text_size"/>

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/event_text_padding"
                android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/event_start_date"
                    android:textColor="@color/colorEventTextLabels"
                    android:textSize="@dimen/event_text_size"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/event_text_padding"
                android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/event_end_date"
                    android:textColor="@color/colorEventTextLabels"
                    android:textSize="@dimen/event_text_size"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_event_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/event_text_padding"
            app:hintTextAppearance="@style/TextInputLayoutLabelSize">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_event_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_about_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/colorEventTextLabels"
                android:textSize="@dimen/event_text_size"
                android:minHeight="150dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add"
            android:id="@+id/btn_event_add"
            android:visibility="gone"
    />

</LinearLayout>